# SonnyLabs_Saksham

./: README.md
api/python/: README.md  pyproject.toml
api/python/example/: llm.py  main.py
api/python/sonnylabs/: __init__.py
infra/aws/: autoscale.init.sh  deploy.sh  web.init.sh  web.service.yaml
ml/bert/: notes.txt  requirements.in  requirements.txt  test.py
ml/pii/: requirements.txt  test.py
ml/prompt_injection/: notes.txt  requirements.in  requirements.txt  run.py  train.py
ml/prompt_injection/_output/: tokenizer.json
ml/toxicity/: notes.txt  pull.py  requirements.in  requirements.txt  train.py
ml/toxicity/output/: classifier.pickle  logistic_regression.json  tfidf_vectorizer.json  vectorizer.pickle
service/: Cargo.toml  Dockerfile  docker-compose.yaml  entrypoint.sh  requirements.in  requirements.txt
service/db/: 1_account.sql  2_analysis.sql
service/pickles/pii/xx_ent_wiki_sm/: meta.json
service/pickles/prompt_injection/: classifier.pickle  vectorizer.pickle
service/pickles/toxicity/: classifier.pickle  tokenizer.pickle  vectorizer.pickle
service/src/: auth.rs  db.rs  header.rs  lib.rs  ml.rs  python.rs  web.rs
service/src/ml/: pii.rs  prompt_injection.rs  toxicity.rs
service/src/v1/: analysis.rs
service/src/web/: admin.rs  analysis.rs  auth.rs
site/: index.html  zip.sh
tools/: docker-login.sh  merge-yaml  run_as_module.py
