[package]
name = "sonnylabs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros", "tracing"] }
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
axum-htmx = "0.5.0"
bcrypt = "0.15.1"
chrono = "0.4.31"
dotenv = "0.15.0"
include_dir = "0.7.3"
jsonwebtoken = "9.2.0"
lipsum = "0.9.0"
minijinja = "1.0.11"
pyo3 = "0.21.2"
pyo3-pylogger = "0.2.2"
rand = "0.8.5"
reqwest = "0.11.23"
rng = "0.1.0"
serde = { version = "1.0.195", features = ["derive"] }
socket2 = "0.5.6"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.6.1"

[dev-dependencies]
env_logger = "0.11.2"
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
